[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/sprite_punch2.png" type="Texture" id=1]
[ext_resource path="res://sprites/sprite_hit_on_ground_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/sprite_hit_on_ground.png" type="Texture" id=3]
[ext_resource path="res://sprites/sprite_hit_on_ground_3.png" type="Texture" id=4]
[ext_resource path="res://sprites/sprite_punch1.png" type="Texture" id=5]
[ext_resource path="res://sprites/sprite_crouch_kick_2.png" type="Texture" id=6]
[ext_resource path="res://sprites/sprite_crouch_kick_3.png" type="Texture" id=7]
[ext_resource path="res://sprites/sprite_walk1.png" type="Texture" id=8]
[ext_resource path="res://sprites/sprite_walk4.png" type="Texture" id=9]
[ext_resource path="res://sprites/sprite_kick2.png" type="Texture" id=10]
[ext_resource path="res://sprites/sprite_idle.png" type="Texture" id=11]
[ext_resource path="res://sprites/sprite_walk5.png" type="Texture" id=12]
[ext_resource path="res://sprites/sprite_walk3.png" type="Texture" id=13]
[ext_resource path="res://sprites/sprite_walk6.png" type="Texture" id=14]
[ext_resource path="res://sprites/sprite_walk8.png" type="Texture" id=15]
[ext_resource path="res://sprites/sprite_walk7.png" type="Texture" id=16]
[ext_resource path="res://sprites/sprite_walk2.png" type="Texture" id=17]
[ext_resource path="res://sprites/sprite_kick1.png" type="Texture" id=18]
[ext_resource path="res://fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://ColorPickerTest.gd" type="Script" id=20]
[ext_resource path="res://ParallaxLayer3.gd" type="Script" id=21]
[ext_resource path="res://ParallaxLayer.gd" type="Script" id=22]
[ext_resource path="res://Pixilart Sprite Sheet starry sky.png" type="Texture" id=23]
[ext_resource path="res://shadown.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=12]
size = 100
outline_size = 4
outline_color = Color( 0.560784, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=11]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ColorPickerTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 4970, 0 )
script = ExtResource( 22 )
speed = 2.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 1694.13, 542.417 )
rotation = 1.5708
scale = Vector2( 0.093, 9.945 )
texture = ExtResource( 23 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 4970, 0 )
script = ExtResource( 21 )
speed = 2.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 4160, 544 )
scale = Vector2( 3, 2.18 )
texture = ExtResource( 24 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = 240.0
margin_right = 76.0
margin_bottom = 297.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 75, 0 )
custom_fonts/font = SubResource( 5 )
text = "GO BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -20.0
margin_right = 240.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player1"]
scale = Vector2( 6, 6 )
frames = SubResource( 1 )
frame = 15
playing = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="Player1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = -50.0
margin_right = 330.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 100, 0 )
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player1/ColorPickerButton"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.2417
margin_top = 5.03491
margin_right = 70.7583
margin_bottom = 36.0349
custom_fonts/font = SubResource( 4 )
text = "PICK A COLOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -20.0
margin_right = -200.0
margin_bottom = 20.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Player2"]
scale = Vector2( 6, 6 )
frames = SubResource( 1 )
frame = 15
playing = true

[node name="ColorPickerButton2" type="ColorPickerButton" parent="Player2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.0
margin_top = -50.0
margin_right = -170.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 100, 0 )
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player2/ColorPickerButton2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.2417
margin_top = 5.03491
margin_right = 70.7583
margin_bottom = 36.0349
custom_fonts/font = SubResource( 4 )
text = "PICK A COLOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="START" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -53.0
margin_right = 193.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 12 )
text = "MAP SELECT"
flat = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/ColorRect"]
autoplay = "fade_in"
anims/RESET = SubResource( 9 )
anims/fade_in = SubResource( 10 )
anims/fade_out = SubResource( 11 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="color_changed" from="Player1/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="Player2/ColorPickerButton2" to="." method="_on_ColorPickerButton2_color_changed"]
[connection signal="pressed" from="START" to="." method="_on_START_pressed"]
[connection signal="animation_finished" from="CanvasLayer2/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
